--- a/storgate-addon/manifest.json
+++ b/storgate-addon/manifest.json
@@ -9,7 +9,7 @@
     ],
     "browser_action":
     {
-        "default_icon": "icon.png"
+        "default_icon": "addon-icon.png"
     },
     "background" : {
         "scripts" : ["background.js"]
